test_cases/pass/p25.lxr
SCRIPT AREA
START SCRIPT
DECLARE BOOL b
b="TRUE"
IF (NOT NOT NOT b)
START IF
    PRINT: "flipped"
END IF
ELSE
START IF
    PRINT: "original"
END IF
END SCRIPT
