test_cases/fail/f41.lxr
SCRIPT AREA
START SCRIPT
DECLARE BOOL b
DECLARE INT x
b="TRUE"
x=-b
END SCRIPT
